--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<nav class="header">
-		<h1>Shaw's News</h1>
-	</nav>
+
+		<h1 class="header">Shaw's News</h1>
+	
 	<div class="holder">
 		<div class="latest-news-section">
 			<h3>Latest News Articles</h3>
