--- a/main.html
+++ b/main.html
@@ -10,8 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
-		<h1 class="header">Shaw's News</h1>
+<header>
+	<h1 class="header">Shaw's News</h1>
+</header>
+		
 	
 	<div class="holder">
 		<div class="latest-news-section">
